cleans up some posts

--- a/_posts/2017-06-29-dad.markdown
+++ b/_posts/2017-06-29-dad.markdown
@@ -5,16 +5,18 @@ date: 2017-06-29 12:35:03
 categories: autobio
 contentType: autobio
 ---
-It must've been 4 years ago now that I went to my father's funeral, and I've been thinking about it ever since.  I stood there while my brother said something, while my sister said something, and I didn't say anything.  My brother nudged me, as he is wont to do, but I just didn't have anything to say.  I could only think of two banal stories that didn't seem worth sharing, and I wasn't about to open the floorboards to reveal the pits of darkness that had overshadowed the last decade of my relationship with him.
+It must've been 4 years ago now that I went to my father's funeral and said nothing, and I've been thinking about it ever since.  I stood there while my brother said something, while my sister said something, and I didn't say anything.  My brother nudged me, as he is wont to do, but I just didn't have anything to say.  I could only think of two banal stories that didn't seem worth sharing, and I wasn't about to open the floorboards to reveal the pits of darkness that had overshadowed the last decade of my relationship with him.
 
 I've been thinking about what I should've said ever since.  I still don't have any witty stories, but those banal ones seem worth sharing now, maybe because people's memories of him might be fading, or maybe mine are sharpening due to these pointless repetitions of his funeral.
 
-He used to read while driving.  He was teaching a class in Valdosta, and would drive from Ashburn to Valdosta every so often.  Not only is that a longer drive than you'd think, but it's intensely boring; flat, uninteresting, and samey.  I did a few long drives with him while I was down there, and he would literally bust out a paperback and read it over the steering wheel.  There was nothing to see, no other cars, no turns - there was no problem with him finding a distraction.  It was just odd, and very like him, to choose a book to be that distraction.  Why not a book on tape?  Why not the radio?
+He used to read while driving.  He was teaching a class in Valdosta, Georgia, and would drive from Ashburn to Valdosta every so often.  Not only is that a longer drive than you'd think, but it's intensely boring; flat and samey.  I did a few long drives with him while I was down there, and he would literally bust out a paperback and read it over the steering wheel.  There was nothing to see, no other cars, no turns - there was no problem with him finding a distraction.  It was just odd, and very like him, to choose a book to be that distraction.  Why not a book on tape?  Why not the radio?
 
-When he flew, he liked the aisle seat.  "That way, you can stretch your legs," was his explanation.  If any of you have done that - I mean, sat in the aisle and stretched your legs, they're going to be right in the aisle, potentially getting in the way of people going to the bathroom, or the drinks tray, or whatever.  It really shows his casual confidence, his innocent arrogance, that made him so endearing.
+When he flew, he liked the aisle seat.  "That way, you can stretch your legs," was his explanation.  If any of you have done that - I mean, sat in the aisle and stretched your legs, they're going to be right in the aisle, potentially getting in the way of people going to the bathroom, or the drinks tray, or whatever.  That preference shows the casual confidence, the innocent arrogance, that made him so endearing.
 
-Finally, and this is the big one, he liked his coffee weak.  Like, very, very weak - below even diner coffee on my personal coffee-ranking system.  (I should note that I love diner coffee.)  He put in one scoop of coffee in a full 8-cup pot.  My mother, who not only raised me, but also taught me how to make coffee, always put one scoop for each cup - because that's how you're supposed to make coffee.  Read the instructions, seriously.  When I tasted his coffee, I didn't dislike it, but I found its blandness - or, rather, its similarity in flavor to bath water, which, rather than being bland, has the round, vibratory tone of whatever the local tap tastes like - noteworthy, maybe remarkable, so I remarked upon it.  
+Finally, and this is the big one: he liked his coffee weak.  Like, very, very weak - below even diner coffee on my personal coffee-ranking system.  (I should note that I love diner coffee.)  He put in one scoop of coffee in a full 8-cup pot.  My mother, who not only raised me, but also taught me how to make coffee, always put one scoop for each cup - because that's how you're supposed to make coffee.  Read the instructions, seriously.  When I tasted his coffee, I didn't dislike it, but I found its blandness - or, rather, its similarity in flavor to plain water, which, rather than being bland, has the round, vibratory tone of whatever the local tap tastes like - noteworthy, maybe remarkable, so I remarked on it.  
 
 He was surprised.  He was completely unaware that he was making coffee any differently than anyone else.  "My mom puts in a lot more coffee than that," I told him.  "How much, 2 or 3 scoops?" he asked.  No, not 2 or 3, I wanted to say.  8, I wanted to say.  But we stood there, as if negotiating our mutual incomprehension; I couldn't jump straight to 8.  "4, I think," I said to him.  "FOUR??" he replied.  I didn't realize right away that his purpose in the discussion was to consider raising the quantity he was putting in the coffee, so I would like it more.  4, it was clear, was too much.  He was unwilling to go that high.  I wasn't concerned; while I prefer strong, dark coffee, his scalding bathwater wasn't terrible, it was just different.  I put a stop to the negotiation and I don't remember what happened next.
 
 The slack-jawed disbelief that crossed his face when I told him my mother puts half the coffee she actually does will stay with me forever.  I don't know why; I know it's not a particularly funny story, but it was character-defining to me.
+
+Do I really have no vignettes of him?  Nothing he taught me, nothing we did together that I remember fondly?
